fix player modal alignment

--- a/components/bracket-challenge/player/player-modal/player-modal.module.scss
+++ b/components/bracket-challenge/player/player-modal/player-modal.module.scss
@@ -4,6 +4,7 @@
 .modal {
   background-color: variables.$black;
   width: 800px;
+  text-align: left;
 }
 
 .playerImage {
